array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
    if ((num[i] < num[i+1]) && (num(i)!=0)){
                        ^Island:9: error: ']' expected but '}' found.
  }
  ^